[package]
name = "ire"
description = "I2P router implementation in Rust"
version = "0.0.1"
license = "MIT"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
homepage = "https://github.com/str4d/ire"
repository = "https://github.com/str4d/ire"
readme = "README.md"
categories = ["cryptography"]
keywords = ["i2p", "net", "network", "privacy", "security"]
edition = "2021"
rust-version = "1.64"

[dependencies]
arrayref = "0.3"
bloom-filter-rs = "0.1"
bytes = "1"
chrono = "0.4"
cookie-factory = "0.2"
data-encoding = "2.1"
flate2 = "1.0"
futures = "0.3"
i2p_snow = "0.5.1"
itertools = "0.14"
lazy_static = "1.0"
log = "0.4"
native-tls = "0.2"
nom = "7"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
rand_7 = { package = "rand", version = "0.7" }
rand = "0.8"
ring = "0.17"
siphasher = "1"
tokio = "1"
tokio-threadpool = "0.1"
tokio-tls = "0.2"

# AES-256
aes = "0.8"
cbc = "0.1"

# Signatures
ed25519-dalek = "2"
p256 = "0.12"
p384 = "0.12"
rsa = "0.9"

# Hash functions
sha1 = "0.10"
sha2 = "0.10"

# Reseeding
zip = { version = "6", default-features = false, features = ["deflate"] }

# Secret management
subtle = "2"

# Configuration
config = { version = "0.15", default-features = false, features = ["toml"] }

# CLI dependencies
clap = { version = "4", optional = true }
env_logger = { version = "0.11", optional = true }

# Legacy-compatible aliases while migration to latest major APIs is in progress.
bytes_04 = { package = "bytes", version = "0.4" }
futures_01 = { package = "futures", version = "0.1" }
tokio_01 = { package = "tokio", version = "0.1" }
ed25519_dalek_1 = { package = "ed25519-dalek", version = "1" }
rsa_08 = { package = "rsa", version = "0.8" }

[dev-dependencies]
pretty_assertions = "1.3"
tempfile = "3"
trycmd = "1"

[features]
cli = ["clap", "env_logger"]
nightly = []

[[bin]]
name = "ire"
required-features = ["cli"]

[[test]]
name = "cli_tests"
required-features = ["cli"]

[patch.crates-io]
rust-crypto = { path = "vendor/rust-crypto" }
